--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+      <img src="%PUBLIC_URL%/loading.svg" alt="Loading..." style="margin-top: 40vh;margin-left: 45vw;" />
+  </div>
   </body>
 
 </html>
