--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
   <div id="root">
       <img src="%PUBLIC_URL%/loading.svg" alt="Loading..." style="margin-top: 40vh;margin-left: 45vw;" />
   </div>
+
+  <audio src="%PUBLIC_URL%/notification.mp3" id="beeper"></audio>
   </body>
 
 </html>
